Fixed Done button alignment, added comment length and increased commment font size

--- a/src/App.css
+++ b/src/App.css
@@ -118,6 +118,7 @@
 	flex-direction: column;
 	align-items: center;
 	border: 1px solid #212121;
+	background-color: #f0f0f0;
 	border-radius: 8px;
 	margin: 5px;
 }
@@ -129,10 +130,28 @@
 	width: 98%;
 	border-radius: 8px;
 	font-family: sans-serif;
-	font-size: 14px;
+	font-size: 15px;
+	background-color: #f0f0f0;
 	border: none;
 	outline: none;
 	resize: none;
+}
+
+.textarea-functionalities {
+	display: flex;
+	flex-direction: row;
+	width: 95%;
+	gap: 15px;
+	align-items: baseline;
+}
+
+.empty-space {
+	flex: 1;
+}
+
+.comment-length {
+	font-size: 14px;
+	color: #7e7e7e;
 }
 
 .submit-button {
